zed/tree-sitter-tsb/grammar.js
    source_file: $ => repeat($._statement),

    // Statements grow with each phase.
    _statement: $ => choice(
      $.import_statement,
      $.export_statement,
      $.type_alias,
      $.attributed_declaration,
      $.function_declaration,
      $.struct_declaration,
      $.impl_declaration,
      $.trait_declaration,
      $.return_statement,
      $.variable_declaration,
      $.if_statement,
      $.statement_block,
      seq($._expression, ';'),
    ),

    // ----- attributes -----------------------------------------------

    // `#[a, b(x), c("y", 1)]` — one bracket block holds one or more
    // comma-separated attribute items. Each item is a name plus
    // optional call-shaped arguments. Multiple bracket blocks can
    // stack on a declaration.
    attribute: $ => seq(
      '#',
      '[',
      commaSep1($.attribute_item),
      ']',
    ),

    attribute_item: $ => seq(
      field('name', $.identifier),
      optional(field('arguments', $.attribute_arguments)),
    ),

    attribute_arguments: $ => seq(
      '(',
      commaSep($._attribute_value),
      ')',
    ),

    _attribute_value: $ => choice(
      $.string,
      $.number,
      $.boolean,
      $.identifier,
      $.attribute_call,
    ),

    // Nested call inside attribute args — supports patterns like
    // `#[default(SomeFactory())]`.
    attributed_declaration: $ => seq(
      repeat1($.attribute),
      choice(
        $.struct_declaration,
        $.impl_declaration,
        $.trait_declaration,
        $.function_declaration,
      ),
    ),

    // ----- top-level declarations -----------------------------------

    function_declaration: $ => seq(
      optional('export'),
      optional('async'),
      'function',
      field('name', $.identifier),
      optional(field('generics', $.type_parameters)),
      field('parameters', $.arrow_parameters),
      optional(seq(':', field('return_type', $._type))),
      field('body', $.statement_block),
    ),

    struct_declaration: $ => seq(
      optional('export'),
      'struct',
      field('name', $.type_identifier),
      optional(field('generics', $.type_parameters)),
      field('body', $.struct_body),
    ),

    struct_body: $ => seq(
      '{',
      commaSep($.struct_field),
      '}',
    ),

    struct_field: $ => seq(
      repeat($.attribute),
      field('name', $.identifier),
      optional('?'),
      ':',
      field('type', $._type),
    ),

    return_statement: $ => seq(
      'return',
      optional($._expression),
      ';',
    ),

    variable_declaration: $ => seq(
      choice('let', 'const'),
      field('name', $.identifier),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
      ';',
    ),

    if_statement: $ => prec.right(seq(
      'if',
      '(',
      field('condition', $._expression),
      ')',
      field('consequence', $._statement),
      optional(seq('else', field('alternative', $._statement))),
    )),

    // ----- type expressions -----------------------------------------

    _type: $ => choice(
      $.union_type,
      $._primary_type,
    ),

    primitive_type: $ => choice(
      'string', 'number', 'boolean', 'void',
      'any', 'unknown', 'never', 'object',
      'symbol', 'bigint',
    ),

    named_type: $ => $.type_identifier,

    // `Self` is a reserved type token in tsb. The bare literal
    // string lets tree-sitter's reserved-word machinery exclude
    // `Self` from `type_identifier` matches automatically.
    type_identifier: $ => token(prec(-1, /[A-Z][A-Za-z0-9_]*/)),

    // ----- imports / exports -----------------------------------------

    _expression: $ => choice(
      $.assignment_expression,
      $._right_expression,
    ),

    // "Right-hand" expressions: anything that can appear on the RHS
    // of an assignment, in an argument position, etc.
    _right_expression: $ => choice(
      $.match_expression,
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.call_expression,
      $.member_expression,
      $.subscript_expression,
      $.parenthesised_expression,
      $.arrow_function,
      $.array_literal,
      $.object_literal,
      $.template_string,
      $.identifier,
      $.number,
      $.string,
      $.boolean,
      $.null_literal,
      $.undefined_literal,
    ),

    // ----- match expression -----------------------------------------

    match_expression: $ => seq(
      'match',
      field('scrutinee', $._right_expression),
      '{',
      commaSep($.match_arm),
      '}',
    ),

    match_arm: $ => seq(
      field('pattern', $._pattern),
      '=>',
      field('body', $._expression),
    ),

    _pattern: $ => choice(
      $.wildcard_pattern,
      $.struct_pattern,
      $.object_pattern,
      $.literal_pattern,
      $.binding_pattern,
    ),

    wildcard_pattern: $ => '_',

    // PascalCase identifier — optionally followed by a struct-shaped
    // body of field bindings. `BadNumber { input }` matches when the
    // scrutinee carries the BadNumber brand and binds `input`.
    struct_pattern: $ => seq(
      field('name', $.type_identifier),
      optional(field('body', $.pattern_body)),
    ),

    // Plain object pattern — for matching unbranded discriminated
    // unions like Result. `{ ok: true, value }` checks `ok === true`
    // and binds `value`.
    object_pattern: $ => $.pattern_body,

    pattern_body: $ => seq(
      '{',
      commaSep($._pattern_entry),
      '}',
    ),

    _pattern_entry: $ => choice(
      $.pattern_check,
      $.pattern_bind,
      $.pattern_shorthand,
    ),

    pattern_check: $ => seq(
      field('key', $.identifier),
      ':',
      field('value', choice($.string, $.number, $.boolean, $.null_literal, $.undefined_literal)),
    ),

    pattern_bind: $ => seq(
      field('key', $.identifier),
      ':',
      field('binding', $.identifier),
    ),

    pattern_shorthand: $ => $.identifier,

    literal_pattern: $ => choice(
      $.string,
      $.number,
      $.boolean,
      $.null_literal,
      $.undefined_literal,
    ),

    // A camelCase-style identifier binds the whole scrutinee for the
    // arm. PascalCase identifiers are reserved for struct patterns
    // (see `struct_pattern` above) — so the lexer needs a separate
    // token kind for them. Lower lexer precedence on the regex so
    // any literal keyword wins ties.
    binary_expression: $ => choice(
      prec.left(3, seq($._right_expression, '||', $._right_expression)),
      prec.left(3, seq($._right_expression, '??', $._right_expression)),
      prec.left(4, seq($._right_expression, '&&', $._right_expression)),
      prec.left(5, seq($._right_expression, choice('==', '!=', '===', '!=='), $._right_expression)),
      prec.left(6, seq($._right_expression, choice('<', '>', '<=', '>='), $._right_expression)),
      prec.left(7, seq($._right_expression, choice('+', '-'), $._right_expression)),
      prec.left(8, seq($._right_expression, choice('*', '/', '%'), $._right_expression)),
    ),

    unary_expression: $ => prec(9, seq(
      choice('!', '-', '+', 'typeof', 'await', '...'),
      $._right_expression,
    )),

    call_expression: $ => prec(10, seq(
      field('function', $._right_expression),
      field('arguments', $.arguments),
    )),

    arguments: $ => seq(
      '(',
      commaSep($._expression),
      ')',
    ),

    member_expression: $ => prec(11, seq(
      field('object', $._right_expression),
      choice('.', '?.'),
      field('property', $.identifier),
    )),

    arrow_parameters: $ => seq(
      '(',
      commaSep($.formal_parameter),
      ')',
    ),

    formal_parameter: $ => seq(
      field('name', $.identifier),
      optional('?'),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('default', $._expression))),
    ),

    object_literal: $ => seq(
      '{',
      commaSep(choice(
        $.object_property,
        $.shorthand_property,
        $.spread_element,
      )),
      '}',
    ),

    shorthand_property: $ => $.identifier,

    statement_block: $ => seq(
      '{',
      repeat($._statement),
      '}',
    ),

    // ----- lexical primitives -----------------------------------------

    identifier: $ => /[A-Za-z_$][A-Za-z0-9_$]*/,

    number: $ => token(choice(
      // hex / oct / bin
      /0[xX][0-9a-fA-F_]+/,
      /0[oO][0-7_]+/,
      /0[bB][01_]+/,
      // float / int with optional exponent
      /[0-9][0-9_]*(\.[0-9_]+)?([eE][+-]?[0-9_]+)?/,
      /\.[0-9_]+([eE][+-]?[0-9_]+)?/,
    )),

    string: $ => choice(
      $._double_string,
      $._single_string,
    ),

    _double_string: $ => seq(
      '"',
      repeat(choice(
        $.string_fragment_double,
        $.escape_sequence,
      )),
      '"',
    ),

    _single_string: $ => seq(
      "'",
      repeat(choice(
        $.string_fragment_single,
        $.escape_sequence,
      )),
      "'",
    ),

    string_fragment_double: $ => token.immediate(/[^"\\]+/),
    string_fragment_single: $ => token.immediate(/[^'\\]+/),

    escape_sequence: $ => token.immediate(seq(
      '\\',
      choice(
        /[^xu0-7]/,
        /[0-7]{1,3}/,
        /x[0-9a-fA-F]{2}/,
        /u[0-9a-fA-F]{4}/,
        /u\{[0-9a-fA-F]+\}/,
      ),
    )),

    boolean: $ => choice('true', 'false'),
    // `null` is a reserved node-name in tree-sitter query syntax —
    // can't be used as a rule name without breaking highlights.scm.
    null_literal: $ => 'null',
    undefined_literal: $ => 'undefined',

    // ----- comments ---------------------------------------------------

    line_comment: $ => token(seq('//', /[^\n]*/)),

    // ----- helpers (referenced by rules above) ----------------------

    block_comment: $ => token(seq(
      '/*',
      /[^*]*\*+([^/*][^*]*\*+)*/,
      '/',
    )),
  },
});

/** Comma-separated list (possibly empty). */
function commaSep(rule) {
  return optional(commaSep1(rule));
}

/** Comma-separated list with at least one element; trailing comma OK. */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)), optional(','));
}
